--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "mockery/mockery": "^1.3"
     }
 }
